--- a/templates/recipes/recipe_form.html
+++ b/templates/recipes/recipe_form.html
@@ -34,10 +34,10 @@
         <div class="form__field-group">
           <div class="form__field-group-ingredientes">
             <div class="form__dropdown">
-              <input type="text" id="nameIngredient" class="form__input" name="ingredients_search">
+              <input type="text" id="nameIngredient" class="form__input" name="ingredients_search" placeholder="Поиск ингредиентов" autocomplete="off">
               <div class="form__dropdown-items"></div>
             </div>
-            <input type="number" id="cantidad" class="form__input" min="1">
+            <input type="number" id="cantidad" class="form__input" min="1" value="1">
             <label for="cantidad" class="form__label" id="cantidadVal">шт.</label>
           </div>
           <div class="form__field-group-ingredientes-container">
