--- a/templates/about/tech.html
+++ b/templates/about/tech.html
@@ -19,6 +19,10 @@
       <span style="color: lightgrey"> версия 3.12.2</span>
     </li>
     <li>
+      <a href="https://python-pillow.org" target="_blank" class="nav__link link">Pillow</a>
+      <span style="color: lightgrey"> версия 8.1.1</span>
+    </li>
+    <li>
       <a href="#" target="_blank" class="nav__link link">Gunicorn</a>
       <span style="color: lightgrey"></span>
     </li>
