--- a/templates/about/tech.html
+++ b/templates/about/tech.html
@@ -19,7 +19,7 @@
       <span style="color: lightgrey"> версия 3.12.2</span>
     </li>
     <li>
-      <a href="https://python-pillow.org" target="_blank" class="nav__link link">Pillow</a>
+      <a href="https://python-pillow.org/" target="_blank" class="nav__link link">Pillow</a>
       <span style="color: lightgrey"> версия 8.1.1</span>
     </li>
     <li>
