--- a/templates/includes/pagination_item.html
+++ b/templates/includes/pagination_item.html
@@ -1,4 +1,4 @@
-{% load recipes_custom_filters %}
+{% load recipes_filters %}
 {% for q in paginator.page_range|slice:slice_range %}
   {% if q == page_obj.number %}
     <li class="pagination__item pagination__item_active"><a class="pagination__link link" href="#">{{ q }}</a></li>
