--- a/templates/includes/paginator.html
+++ b/templates/includes/paginator.html
@@ -1,4 +1,4 @@
-{% load recipes_custom_filters %}
+{% load recipes_filters %}
 {% if page_obj.has_other_pages %}
   <nav class="pagination" aria-label="Search results pages">
     <ul class="pagination__container">
