--- a/templates/includes/purchase_button.html
+++ b/templates/includes/purchase_button.html
@@ -1,5 +1,5 @@
 {% if user.is_authenticated %}
-  {% load recipes_custom_filters %}
+  {% load users_filters %}
   <button class="button button_style_light-blue{% if request|request_user_purchases:recipe %}-outline{% endif %}" name="purchases" {% if not request|request_user_purchases:recipe %}data-out{% endif %}>
     {% if request|request_user_purchases:recipe %}<span class="icon-check button__icon"></span> Рецепт добавлен{% else %}<span class="icon-plus button__icon"></span> Добавить в покупки{% endif %}
   </button>
