Define font style of empty list messages

--- a/templates/includes/author_card_list.html
+++ b/templates/includes/author_card_list.html
@@ -2,6 +2,6 @@
   {% for subscription in object_list %}
       {% include 'includes/author_card.html' %}
   {% empty %}
-    <div>Данный список пуст.</div>
+    <p style="font-family: 'Montserrat', sans-serif;">Данный список пуст.</p>
   {% endfor %}
 </div>
