--- a/templates/includes/recipe_card_list.html
+++ b/templates/includes/recipe_card_list.html
@@ -1,7 +1,7 @@
 <div class="card-list">
   {% for recipe in page_obj %}
-      {% include 'includes/recipe_card.html' %}
+    {% include 'includes/recipe_card.html' %}
   {% empty %}
-    <div>Данный список пуст.</div>
+    <p style="font-family: 'Montserrat', sans-serif;">Данный список пуст.</p>
   {% endfor %}
 </div>
