--- a/templates/recipes/recipe_list.html
+++ b/templates/recipes/recipe_list.html
@@ -6,7 +6,7 @@
 {% block main_header %}{% include 'includes/tags.html' %}{% endblock %}
 
 {% block main_content %}
-  {% if request.resolver_match.url_name == 'author_recie_list' %}
+  {% if request.resolver_match.url_name == 'author_recipe_list' %}
     <div class="author-subscribe" data-author="{{ author.id }}">
       <p style="padding: 0 0 2em 0;">{% include 'includes/subscription_button.html' %}</p>
     </div>
