Put in order auth templates

--- a/templates/recipes/recipe_form.html
+++ b/templates/recipes/recipe_form.html
@@ -26,7 +26,9 @@
               </div>
             {% endfor %}
           </div>
-          <span class="form__error"></span>
+
+            <span class="form__error">{{ form.errors }}</span>
+
         </div>
       </div>
       <div class="form__group">
