--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -5,33 +5,24 @@
 {% block main_title %}Поменять пароль {{ user.username }}{% endblock %}
 
 {% block main_content %}
-    <div class="form-container">
-        <form class="form" method="post">
-            {% csrf_token %}
-            <div class="form__group">
-                <label for="id_old_password" class="form__label">Действующий пароль</label>
-                <div class="form__field-group">
-                    <input type="password" name="old_password" id="id_old_password" class="form__input">
-                    <span class="form__error"></span>
-                </div>
-            </div>
-            <div class="form__group">
-                <label for="id_new_password1" class="form__label">Новый пароль</label>
-                <div class="form__field-group">
-                    <input type="password" name="new_password1" id="id_new_password1" class="form__input">
-                    <span class="form__error"></span>
-                </div>
-            </div>
-            <div class="form__group">
-                <label for="id_new_password2" class="form__label">Новый пароль повторно</label>
-                <div class="form__field-group">
-                    <input type="password" name="new_password2" id="id_new_password2" class="form__input">
-                    <span class="form__error"></span>
-                </div>
-            </div>
-            <div class="form__footer">
-                <button class="button button_style_blue">Поменять пароль</button>
-            </div>
-        </form>
-    </div>
+  <div class="form-container">{% load recipes_filters %}
+    <form class="form" method="post">{% csrf_token %}
+
+      {% for field in form %}
+        <div class="form__group">
+          <label for="{{ field.id_for_label }}" class="form__label">{{ field.label }}</label>
+          <div class="form__field-group">
+            {{ field|add_class:'form__input' }}
+            {% for error in field.errors %}
+              <span class="form__error">{{ error }}</span>
+            {% endfor %}
+          </div>
+        </div>
+      {% endfor %}
+
+      <div class="form__footer">
+        <button class="button button_style_blue">Поменять пароль</button>
+      </div>
+    </form>
+  </div>
 {% endblock %}
