--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,33 +1,41 @@
 {% extends 'base.html' %}
+{% load static %}
+{% load i18n %}
+{% load recipes_filters %}
+
 
 {% block title %}Войти на сайт{% endblock %}
-{% block stylesheet %}{% load static %}{% static 'pages/form.css' %}{% endblock %}
+{% block stylesheet %}{% static 'pages/form.css' %}{% endblock %}
 {% block main_title %}Войти на сайт{% endblock %}
 
 {% block main_content %}
-    <div class="form-container">
-        <form class="form" method="post">
-            {% csrf_token %}
-            <div class="form__group">
-                <label for="id_username" class="form__label">Имя</label>
-                <div class="form__field-group">
-                    <input type="text" name="username" id="id_username" class="form__input">
-                    <span class="form__error"></span>
-                </div>
+  <div class="form-container">
+    <form class="form" method="post">{% csrf_token %}
+
+        {% for field in form %}
+          <div class="form__group">
+            <label for="{{ field.id_for_label }}" class="form__label">{{ field.label }}</label>
+            <div class="form__field-group">
+              {{ field|add_class:'form__input' }}
+              {% for error in field.errors %}
+                <span class="form__error">{{ error }}</span>
+              {% endfor %}
             </div>
-            <div class="form__group">
-                <label for="id_password" class="form__label">Пароль</label>
-                <div class="form__field-group">
-                    <input type="password" name="password" id="id_password" class="form__input">
-                    {% if form.errors %}
-                    <span class="form__error">Имя пользоваетеля и пароль не совпадают.</span>
-                    {% endif %}
-                </div>
+          </div>
+        {% endfor %}
+
+        {% if form.non_field_errors %}
+          <div class="form__group">
+            <div class="form__field-group">
+              <span class="form__error">Имя пользоваетеля и пароль не совпадают.<br>Введите правильные данные.</span>
             </div>
-            <div class="form__footer">
-                <button class="button button_style_blue">Войти</button>
-                <a class="form__forgot-link" href="{% url 'password_reset' %}">Забыли пароль?</a>
-            </div>
-        </form>
-    </div>
+          </div>
+        {% endif %}
+
+        <div class="form__footer">
+          <button class="button button_style_blue">Войти</button>
+          <a class="form__forgot-link" href="{% url 'password_reset' %}">Забыли пароль?</a>
+        </div>
+    </form>
+  </div>
 {% endblock %}
