--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,8 +1,13 @@
 {% extends 'base.html' %}
 
 {% block title %}Пароль изменён{% endblock %}
-{% block stylesheet %}{% load static %}{% static 'pages/form.css' %}{% endblock %}
+{% block stylesheet %}{% load static %}{% static 'pages/index.css' %}{% endblock %}
 
 {% block main_content %}
-    <h1>Пароль изменён</h1>
+  <div class="custom-center-block">
+    <p class="custom-text-block">Пароль изменён.</p>
+    <div class="custom-button-block">
+      <a href="{% url 'main_page' %}" class="button button_style_blue">Перейти на главную</a>
+    </div>
+  </div>
 {% endblock %}
