--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -5,21 +5,24 @@
 {% block main_title %}Сбросить парооль{% endblock %}
 
 {% block main_content %}
-    <div class="form-container">
-        <form class="form" method="post">
-            {% csrf_token %}
-            <div class="form__group">
-                <label for="id_email" class="form__label">Ваш адрес электронной почты</label>
-                <div class="form__field-group">
-                    <input type="email" name="email" id="id_email" class="form__input">
-                    {% if form.errors %}
-                    <span class="form__error">{{ form.errors }}</span>
-                    {% endif %}
-                </div>
-            </div>
-            <div class="form__footer">
-                <button class="button button_style_blue">Сбросить пароль</button>
-            </div>
-        </form>
-    </div>
+  <div class="form-container">{% load recipes_filters %}
+    <form class="form" method="post">{% csrf_token %}
+
+      {% for field in form %}
+        <div class="form__group">
+          <label for="{{ field.id_for_label }}" class="form__label">{{ field.label }}</label>
+          <div class="form__field-group">
+            {{ field|add_class:'form__input' }}
+            {% for error in field.errors %}
+              <span class="form__error">{{ error }}</span>
+            {% endfor %}
+          </div>
+        </div>
+      {% endfor %}
+
+      <div class="form__footer">
+        <button class="button button_style_blue">Сбросить пароль</button>
+      </div>
+    </form>
+  </div>
 {% endblock %}
