Define font style for static pages

--- a/foodgram/templates/about/project.html
+++ b/foodgram/templates/about/project.html
@@ -5,6 +5,7 @@
 {% block main_title %}О проекте Foodgram{% endblock %}
 
 {% block main_content %}
+  <style>h2, h3, p, li {font-family: "Montserrat", sans-serif;}</style>
   <p>
     Продуктовый помощник. Онлайн-сервис, где пользователи могут публиковать рецепты, подписываться на публикации
     других пользователей, добавлять понравившиеся рецепты в список избранного, а перед походом в магазин
