--- a/foodgram/templates/registration/password_reset_complete.html
+++ b/foodgram/templates/registration/password_reset_complete.html
@@ -4,6 +4,7 @@
 {% block stylesheet %}{% load static %}{% static 'pages/form.css' %}{% endblock %}
 
 {% block main_content %}
+  <style>h1, p {font-family: "Montserrat", sans-serif;}</style>
   <h1>Восстановление пароля завершено</h1>
   <p>Ваш пароль был сохранен. Теперь Вы можете войти.</p>
   <p><a href="{% url 'login' %}">Войти</a></p>
