--- a/foodgram/templates/registration/password_reset_done.html
+++ b/foodgram/templates/registration/password_reset_done.html
@@ -4,6 +4,7 @@
 {% block stylesheet %}{% load static %}{% static 'pages/form.css' %}{% endblock %}
 
 {% block main_content %}
+  <style>h1, p {font-family: "Montserrat", sans-serif;}</style>
   <h1>Письмо с инструкциями по восстановлению пароля отправлено</h1>
   <p>Мы отправили вам инструкцию по установке нового пароля на указанный адрес электронной почты
       (если в нашей базе данных есть такой адрес). Вы должны получить ее в ближайшее время.
