--- a/foodgram/templates/includes/author_card_list.html
+++ b/foodgram/templates/includes/author_card_list.html
@@ -1,6 +1,6 @@
 <div class="card-list">
   {% for subscription in object_list %}
-      {% include 'includes/author_card.html' %}
+      {% include 'includes/author_card.html' with author=subscription.author %}
   {% empty %}
     <p style="font-family: 'Montserrat', sans-serif;">Данный список пуст.</p>
   {% endfor %}
