--- a/foodgram/templates/includes/author_card.html
+++ b/foodgram/templates/includes/author_card.html
@@ -1,11 +1,11 @@
 {% load recipes_filters %}
-<div class="card-user" data-author="{{ subscription.author.id }}">{% csrf_token %}
+<div class="card-user" data-author="{{ author.id }}">{% csrf_token %}
   <div class="card-user__header">
-    <h1 class="card-user__title"><a href="{% url 'recipes:author_recipe_list' subscription.author.username %}" class="card__title link" style="color: black">{{ subscription.author.get_full_name }}</a></h1>
+    <h1 class="card-user__title"><a href="{% url 'recipes:author_recipe_list' author.username %}" class="card__title link" style="color: black">{{ author.get_full_name }}</a></h1>
   </div>
   <div class="card-user__body">
     <ul class="card-user__items">
-      {% for recipe in subscription.author.recipes.all|slice:":3" %}
+      {% for recipe in author.recipes.all|slice:":3" %}
         <li class="card-user__item">
           <div class="recipe">
             <a href="{% url 'recipes:recipe_detail' recipe.id %}" style="grid-area: image"><img href="{% url 'recipes:recipe_detail' recipe.id %}" src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="recipe__image"></a>
@@ -17,8 +17,8 @@
         <p style="font-family: 'Montserrat', sans-serif;">Данный список пуст.</p>
       {% endfor %}
         <li class="card-user__item">
-          {% if subscription.author.recipes.count > 3 %}
-            <a href="{% url 'recipes:author_recipe_list' subscription.author.username %}" class="card-user__link link">{{ subscription.author.recipes.count|get_extra_recipes_message }}</a>
+          {% if author.recipes.count > 3 %}
+            <a href="{% url 'recipes:author_recipe_list' author.username %}" class="card-user__link link">{{ author.recipes.count|get_extra_recipes_message }}</a>
           {% endif %}
         </li>
     </ul>
