--- a/foodgram/templates/includes/paginator.html
+++ b/foodgram/templates/includes/paginator.html
@@ -3,7 +3,14 @@
   <nav class="pagination" aria-label="Search results pages">
     <ul class="pagination__container">
       {% if page_obj.has_previous %}
-        <li class="pagination__item"><a class="pagination__link link" href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}tags={{ slug }}&{% endfor %}{% endif %}page={{ page_obj.previous_page_number }}"><span class="icon-left-active"></span></a></li>
+        <li class="pagination__item">
+          <a class="pagination__link link"
+              href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}
+              tags={{ slug }}&{% endfor %}{% endif %}page={{ page_obj.previous_page_number }}"
+          >
+            <span class="icon-left-active"></span>
+          </a>
+        </li>
       {% else %}
         <li class="pagination__item"><a class="pagination__link link"><span class="icon-left-inactive"></span></a></li>
       {% endif %}
@@ -21,7 +28,14 @@
       {% endif %}
 
       {% if page_obj.has_next %}
-        <li class="pagination__item"><a class="pagination__link link" href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}tags={{ slug }}&{% endfor %}{% endif %}page={{ page_obj.next_page_number }}"><span class="icon-right-active"></span></a></li>
+        <li class="pagination__item">
+          <a class="pagination__link link"
+              href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}
+              tags={{ slug }}&{% endfor %}{% endif %}page={{ page_obj.next_page_number }}"
+          >
+            <span class="icon-right-active"></span>
+          </a>
+        </li>
       {% else %}
         <li class="pagination__item"><a class="pagination__link link"><span class="icon-right-inactive"></span></a></li>
       {% endif %}
