--- a/foodgram/templates/includes/author_card.html
+++ b/foodgram/templates/includes/author_card.html
@@ -1,15 +1,26 @@
 {% load recipes_filters %}
 <div class="card-user" data-author="{{ author.id }}">{% csrf_token %}
   <div class="card-user__header">
-    <h1 class="card-user__title"><a href="{% url 'recipes:author_recipe_list' author.username %}" class="card__title link" style="color: black">{{ author.get_full_name }}</a></h1>
+    <h1 class="card-user__title">
+      <a href="{% url 'recipes:author_recipe_list' author.username %}" class="card__title link" style="color: black">
+        {{ author.get_full_name }}
+      </a>
+    </h1>
   </div>
   <div class="card-user__body">
     <ul class="card-user__items">
       {% for recipe in author.recipes.all|slice:":3" %}
         <li class="card-user__item">
           <div class="recipe">
-            <a href="{% url 'recipes:recipe_detail' recipe.id %}" style="grid-area: image"><img href="{% url 'recipes:recipe_detail' recipe.id %}" src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="recipe__image"></a>
-            <h3 class="recipe__title"><a href="{% url 'recipes:recipe_detail' recipe.id %}" class="nav__link link">{{ recipe.title }}</a></h3>
+            <a href="{% url 'recipes:recipe_detail' recipe.id %}" style="grid-area: image">
+              <img
+                  href="{% url 'recipes:recipe_detail' recipe.id %}" src="{{ recipe.image.url }}"
+                  alt="{{ recipe.title }}" class="recipe__image"
+              >
+            </a>
+            <h3 class="recipe__title">
+              <a href="{% url 'recipes:recipe_detail' recipe.id %}" class="nav__link link">{{ recipe.title }}</a>
+            </h3>
             <p class="recipe__text"><span class="icon-time"></span> {{ recipe.cooking_time_minutes }} мин.</p>
           </div>
         </li>
@@ -18,7 +29,9 @@
       {% endfor %}
         <li class="card-user__item">
           {% if author.recipes.count > 3 %}
-            <a href="{% url 'recipes:author_recipe_list' author.username %}" class="card-user__link link">{{ author.recipes.count|get_extra_recipes_message }}</a>
+            <a href="{% url 'recipes:author_recipe_list' author.username %}" class="card-user__link link">
+              {{ author.recipes.count|get_extra_recipes_message }}
+            </a>
           {% endif %}
         </li>
     </ul>
