--- a/foodgram/templates/includes/favorite_button.html
+++ b/foodgram/templates/includes/favorite_button.html
@@ -1,6 +1,9 @@
 {% if user.is_authenticated %}
   {% load users_filters %}{% csrf_token %}
   <button class="button button_style_none" name="favorites" {% if not user|favorites:recipe %}data-out{% endif %}>
-    <span class="icon-favorite {% if request.resolver_match.url_name == 'recipe_detail' %}icon-favorite_big{% endif %} {% if user|favorites:recipe %}icon-favorite_active{% endif %}"></span>
+    <span
+        class="icon-favorite {% if request.resolver_match.url_name == 'recipe_detail' %}
+        icon-favorite_big{% endif %} {% if user|favorites:recipe %}icon-favorite_active{% endif %}">
+    </span>
   </button>
 {% endif %}
