--- a/foodgram/templates/includes/footer.html
+++ b/foodgram/templates/includes/footer.html
@@ -1,7 +1,9 @@
 <div class="footer__container container">
   <a href="{% url 'about:project' %}" class="footer__brand link">Продуктовый помощник</a>
   <ul class="footer__items">
-    <li class="footer__item"><a href="{% url 'about:author' %}" target="_blank" class="footer__link link">Об авторе</a></li>
+    <li class="footer__item">
+      <a href="{% url 'about:author' %}" target="_blank" class="footer__link link">Об авторе</a>
+    </li>
     <li class="footer__item"><a href="{% url 'about:tech' %}" class="footer__link link">Технологии</a></li>
   </ul>
 </div>
