--- a/foodgram/templates/includes/purchase_button.html
+++ b/foodgram/templates/includes/purchase_button.html
@@ -1,6 +1,13 @@
 {% if user.is_authenticated %}
   {% load users_filters %}
-  <button class="button button_style_light-blue{% if user|purchases:recipe %}-outline{% endif %}" name="purchases" {% if not user|purchases:recipe %}data-out{% endif %}>
-    {% if user|purchases:recipe %}<span class="icon-check button__icon"></span> Рецепт добавлен{% else %}<span class="icon-plus button__icon"></span> Добавить в покупки{% endif %}
+  <button
+      class="button button_style_light-blue{% if user|purchases:recipe %}-outline{% endif %}"
+      name="purchases" {% if not user|purchases:recipe %}data-out{% endif %}
+  >
+    {% if user|purchases:recipe %}
+      <span class="icon-check button__icon"></span> Рецепт добавлен
+    {% else %}
+      <span class="icon-plus button__icon"></span> Добавить в покупки
+    {% endif %}
   </button>
 {% endif %}
