--- a/foodgram/templates/includes/recipe_card.html
+++ b/foodgram/templates/includes/recipe_card.html
@@ -1,5 +1,7 @@
 <div class="card" data-id="{{ recipe.id }}">{% csrf_token %}
-  <a href="{% url 'recipes:recipe_detail' recipe.id %}" class="link"><img src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="card__image"></a>
+  <a href="{% url 'recipes:recipe_detail' recipe.id %}" class="link">
+    <img src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="card__image">
+  </a>
   <div class="card__body">
     <a class="card__title link" href="{% url 'recipes:recipe_detail' recipe.id %}">{{ recipe.title }}</a>
     <ul class="card__items">
@@ -7,7 +9,12 @@
     </ul>
     <div class="card__items card__items_column">
       <p class="card__text"><span class="icon-time"></span> {{ recipe.cooking_time_minutes }} мин.</p>
-      <p class="card__text"><span class="icon-user"></span> <a href="{% url 'recipes:author_recipe_list' recipe.author.username %}" style="color: black">{{ recipe.author.get_full_name }}</a></p>
+      <p class="card__text">
+        <span class="icon-user"></span>
+        <a href="{% url 'recipes:author_recipe_list' recipe.author.username %}" style="color: black">
+          {{ recipe.author.get_full_name }}
+        </a>
+      </p>
     </div>
   </div>
   <div class="card__footer">
