--- a/foodgram/templates/recipes/recipe_detail.html
+++ b/foodgram/templates/recipes/recipe_detail.html
@@ -20,9 +20,19 @@
     <div class="single-card__items single-card__items_column">
       <p class="single-card__text"><span class="icon-time"></span> {{ recipe.cooking_time_minutes }} мин.</p>
       <ul class="single-card__items">
-        <li class="single-card__item"><p class="single-card__text"><span class="icon-user"></span> <a href="{% url 'recipes:author_recipe_list' recipe.author.username %}" style="color: black">{{ recipe.author.get_full_name }}</a></p></li>
+        <li class="single-card__item">
+          <p class="single-card__text"><span class="icon-user"></span>
+            <a href="{% url 'recipes:author_recipe_list' recipe.author.username %}" style="color: black">
+              {{ recipe.author.get_full_name }}
+            </a>
+          </p>
+        </li>
         {% if user == recipe.author %}
-          <li class="single-card__item">  <a style="margin-left: 2.5em" href="{% url 'recipes:recipe_update' recipe.id %}" class="single-card__text">Редактировать рецепт</a></li>
+          <li class="single-card__item">
+            <a style="margin-left: 2.5em" href="{% url 'recipes:recipe_update' recipe.id %}" class="single-card__text">
+              Редактировать рецепт
+            </a>
+          </li>
         {% endif %}
       </ul>
     </div>
@@ -35,9 +45,9 @@
       <div class="single-card__items single-card__items_column">
         {% for ingredientinrecipe in object.ingredientinrecipe_set.all %}
           <p class=" single-card__section-item">
-              {{ ingredientinrecipe.ingredient.title }}
-              {{ ingredientinrecipe.quantity }}
-              {{ ingredientinrecipe.ingredient.dimension }}
+            {{ ingredientinrecipe.ingredient.title }}
+            {{ ingredientinrecipe.quantity }}
+            {{ ingredientinrecipe.ingredient.dimension }}
           </p>
         {% endfor %}
       </div>
