--- a/foodgram/templates/recipes/recipe_form.html
+++ b/foodgram/templates/recipes/recipe_form.html
@@ -1,8 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}{% if request.resolver_match.url_name == 'recipe_create' %}Создание рецепта{% else %}Редактирование рецепта{% endif %}{% endblock %}
+{% block title %}
+  {% if request.resolver_match.url_name == 'recipe_create' %}Создание рецепта{% else %}Редактирование рецепта{% endif %}
+{% endblock %}
 {% block stylesheet %}{% load static %}{% static 'pages/form.css' %}{% endblock %}
-{% block main_title %}{% if request.resolver_match.url_name == 'recipe_create' %}Создание рецепта{% else %}Редактирование рецепта{% endif %}{% endblock %}
+{% block main_title %}
+  {% if request.resolver_match.url_name == 'recipe_create' %}Создание рецепта{% else %}Редактирование рецепта{% endif %}
+{% endblock %}
 
 {% block main_content %}
   {% load recipes_filters %}
@@ -23,7 +27,11 @@
           <div class="tags">
             {% for tag, title in form.tags.field.choices %}
               <div class="tags__item">
-                <input type="checkbox" name="tags" id="id_{{ tag.instance.slug }}" class="tags__checkbox tags__checkbox_style_{{ request|tags_and_colors|dict_lookup:tag.instance }}" value="{{ tag.instance.slug }}" {% if tag in form.tags.value %}checked="checked"{% endif %}>
+                <input
+                    type="checkbox" name="tags" id="id_{{ tag.instance.slug }}"
+                    class="tags__checkbox tags__checkbox_style_{{ request|tags_and_colors|dict_lookup:tag.instance }}"
+                    value="{{ tag.instance.slug }}" {% if tag in form.tags.value %}checked="checked"{% endif %}
+                >
                 <label for="id_{{ tag.instance.slug }}" class="tags__label">{{ tag.instance.title }}</label>
               </div>
             {% endfor %}
@@ -38,7 +46,10 @@
         <div class="form__field-group">
           <div class="form__field-group-ingredientes">
             <div class="form__dropdown">
-              <input type="text" id="nameIngredient" class="form__input" name="ingredients_search" placeholder="Поиск ингредиентов" autocomplete="off">
+              <input
+                  type="text" id="nameIngredient" class="form__input" name="ingredients_search"
+                  placeholder="Поиск ингредиентов" autocomplete="off"
+              >
               <div class="form__dropdown-items"></div>
             </div>
             <input type="number" id="cantidad" class="form__input" min="1" value="1">
@@ -49,9 +60,18 @@
               <div class="form__field-item-ingredient" id="ing_{{ forloop.counter }}">
                 <span> {{ item.ingredient.title }} {{ item.quantity }}{{ item.ingredient.dimension }}</span>
                 <span class="form__field-item-delete"></span>
-                <input id="nameIngredient_{{ forloop.counter }}" name="nameIngredient" type="hidden" value="{{ item.ingredient.title }}">
-                <input id="valueIngredient_{{ forloop.counter }}" name="valueIngredient" type="hidden" value="{{ item.quantity }}">
-                <input id="unitsIngredient_{{ forloop.counter }}" name="unitsIngredient" type="hidden" value="{{ item.ingredient.dimension }}">
+                <input
+                    id="nameIngredient_{{ forloop.counter }}" name="nameIngredient" type="hidden"
+                    value="{{ item.ingredient.title }}"
+                >
+                <input
+                    id="valueIngredient_{{ forloop.counter }}" name="valueIngredient" type="hidden"
+                    value="{{ item.quantity }}"
+                >
+                <input
+                    id="unitsIngredient_{{ forloop.counter }}" name="unitsIngredient" type="hidden"
+                    value="{{ item.ingredient.dimension }}"
+                >
               </div>
             {% endfor %}
           </div>
@@ -101,7 +121,8 @@
         {% if request.resolver_match.url_name == 'recipe_create' %}
           <button class="button button_style_blue">Создать рецепт</button>
         {% elif request.resolver_match.url_name == 'recipe_update' %}
-          <button class="button button_style_blue">Сохранить</button><a style="margin-left: 2.5em" href="{% url 'recipes:recipe_delete' recipe.id %}" class="form__ingredient-link">Удалить</a>
+          <button class="button button_style_blue">Сохранить</button>
+          <a style="margin-left: 2.5em" href="{% url 'recipes:recipe_delete' recipe.id %}" class="form__ingredient-link">Удалить</a>
         {% endif %}
       </div>
     </form>
