Put in order href attrs

--- a/foodgram/templates/includes/paginator.html
+++ b/foodgram/templates/includes/paginator.html
@@ -5,8 +5,7 @@
       {% if page_obj.has_previous %}
         <li class="pagination__item">
           <a class="pagination__link link"
-              href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}
-              tags={{ slug }}&{% endfor %}{% endif %}page={{ page_obj.previous_page_number }}"
+              href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}tags={{ slug }}&{% endfor %}{% endif %}page={{ page_obj.previous_page_number }}"
           >
             <span class="icon-left-active"></span>
           </a>
@@ -30,8 +29,7 @@
       {% if page_obj.has_next %}
         <li class="pagination__item">
           <a class="pagination__link link"
-              href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}
-              tags={{ slug }}&{% endfor %}{% endif %}page={{ page_obj.next_page_number }}"
+              href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}tags={{ slug }}&{% endfor %}{% endif %}page={{ page_obj.next_page_number }}"
           >
             <span class="icon-right-active"></span>
           </a>
