--- a/foodgram/templates/includes/pagination_item.html
+++ b/foodgram/templates/includes/pagination_item.html
@@ -5,8 +5,7 @@
   {% else %}
     <li class="pagination__item">
       <a class="pagination__link link"
-          href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}
-          tags={{ slug }}&{% endfor %}{% endif %}page={{ q }}"
+          href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}tags={{ slug }}&{% endfor %}{% endif %}page={{ q }}"
       >
         {{ q }}
       </a>
