--- a/foodgram/templates/recipes/recipe_detail.html
+++ b/foodgram/templates/recipes/recipe_detail.html
@@ -3,7 +3,7 @@
 {% block title %}{{ recipe.title }}{% endblock %}
 {% block stylesheet %}{% load static %}{% static 'pages/single.css' %}{% endblock %}
 
-{% block main_content %}
+{% block main_content %}{% load users_filters %}
 <div class="single-card" data-id="{{ recipe.id }}" data-author="{{ recipe.author.id }}">{% csrf_token %}
   <img src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="single-card__image">
   <div class="single-card__info">
@@ -11,7 +11,9 @@
       <h1 class="single-card__title">{{ recipe.title }}</h1>
       <div class="single-card__favorite">
         {% include 'includes/favorite_button.html' %}
-        <div class="single-card__favorite-tooltip tooltip">Добавить в избранное</div>
+        <div class="single-card__favorite-tooltip tooltip">
+          {% if not user|favorites:recipe %}Добавить в избранное{% else %}Удалить из избранного{% endif %}
+        </div>
       </div>
     </div>
     <ul class="single-card__items">
@@ -43,7 +45,7 @@
     <div class="single-card__section">
       <h3 class="single-card__section-title">Ингридиенты:</h3>
       <div class="single-card__items single-card__items_column">
-        {% for ingredientinrecipe in object.ingredientinrecipe_set.all %}
+        {% for ingredientinrecipe in recipe.ingredientinrecipe_set.all %}
           <p class=" single-card__section-item">
             {{ ingredientinrecipe.ingredient.title }}
             {{ ingredientinrecipe.quantity }}
