--- a/foodgram/templates/users/subscription_list.html
+++ b/foodgram/templates/users/subscription_list.html
@@ -5,7 +5,13 @@
 {% block main_title %}Мои подписки{% endblock %}
 
 {% block main_content %}
-  {% include 'includes/author_card_list.html' %}
+  <div class="card-list">
+    {% for subscription in object_list %}
+      {% include 'includes/author_card.html' with author=subscription.author %}
+    {% empty %}
+      <p style="font-family: 'Montserrat', sans-serif;">Данный список пуст.</p>
+    {% endfor %}
+  </div>
 {% endblock %}
 
 {% block scripts %}
