--- a/foodgram/templates/recipes/recipe_form.html
+++ b/foodgram/templates/recipes/recipe_form.html
@@ -69,7 +69,7 @@
                     value="{{ item.quantity }}"
                 >
                 <input
-                    id="unitsIngredient_{{ forloop.counter }}" name="unitsIngredient" type="hidden"
+                    id="unitIngredient_{{ forloop.counter }}" name="unitIngredient" type="hidden"
                     value="{{ item.ingredient.dimension }}"
                 >
               </div>
